@@ -106,6 +106,7 @@ import org.eclipse.lsp4j.debug.services.IDebugProtocolClient;
 import org.eclipse.lsp4j.jsonrpc.Endpoint;
 import org.eclipse.lsp4j.jsonrpc.messages.Either;
 import org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint;
+import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -154,6 +155,7 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
     private DebugExecutionManager executionManager;
     private JDIEventProcessor eventProcessor;
     private final ExecutionContext context;
+    @Nullable
     private SuspendedContext suspendedContext;
     private DebugOutputLogger outputLogger;
     private DebugExpressionEvaluator evaluator;
@@ -313,8 +315,11 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
         if (eventProcessor == null) {
             return CompletableFuture.completedFuture(threadsResponse);
         }
-        Map<Integer, ThreadReferenceProxyImpl> threadsMap = getActiveStrandThreads();
-        if (threadsMap == null) {
+        Map<Integer, ThreadReferenceProxyImpl> threadsMap;
+        try {
+             threadsMap = getActiveStrandThreads();
+        } catch (IllegalStateException e) {
+            LOGGER.error(e.getMessage());
             return CompletableFuture.completedFuture(threadsResponse);
         }
         Thread[] threads = new Thread[threadsMap.size()];
@@ -343,7 +348,7 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
     public CompletableFuture<StackTraceResponse> stackTrace(StackTraceArguments args) {
         StackTraceResponse stackTraceResponse = new StackTraceResponse();
         try {
-            activeThread = getAllThreads().get(args.getThreadId());
+            ThreadReferenceProxyImpl activeThread = getAllThreads().get(args.getThreadId());
             if (threadStackTraces.containsKey(activeThread.uniqueID())) {
                 stackTraceResponse.setStackFrames(threadStackTraces.get(activeThread.uniqueID()));
             } else {
@@ -354,6 +359,7 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
                 stackTraceResponse.setStackFrames(validFrames);
                 threadStackTraces.put(activeThread.uniqueID(), validFrames);
             }
+            this.activeThread = activeThread;
             return CompletableFuture.completedFuture(stackTraceResponse);
         } catch (Exception e) {
             LOGGER.error(e.getMessage(), e);
@@ -797,6 +803,7 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
     /**
      * Coverts a JDI stack frame instance to a DAP stack frame instance.
      */
+    @Nullable
     private StackFrame toDapStackFrame(StackFrameProxyImpl stackFrameProxy) {
         try {
             if (!isBalStackFrame(stackFrameProxy.getStackFrame())) {
@@ -959,13 +966,14 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
 
     private Variable[] computeGlobalScopeVariables(VariablesArguments requestArgs) {
         int stackFrameReference = requestArgs.getVariablesReference();
-        String classQName = PackageUtils.getQualifiedClassName(suspendedContext, INIT_CLASS_NAME);
-        List<ReferenceType> cls = suspendedContext.getAttachedVm().classesByName(classQName);
+        String classQName = PackageUtils.getQualifiedClassName(
+                Objects.requireNonNull(suspendedContext), INIT_CLASS_NAME);
+        List<ReferenceType> cls = Objects.requireNonNull(suspendedContext).getAttachedVm().classesByName(classQName);
         if (cls.size() != 1) {
             return new Variable[0];
         }
         List<CompletableFuture<Variable>> scheduledVariables = new ArrayList<>();
-        ReferenceType initClassReference = cls.get(0);
+        ReferenceType initClassReference = cls.getFirst();
         for (Field field : initClassReference.allFields()) {
             String fieldName = Utils.decodeIdentifier(field.name());
             if (!field.isPublic() || !field.isStatic() || fieldName.startsWith(GENERATED_VAR_PREFIX)) {
@@ -990,7 +998,7 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
     }
 
     private Variable[] computeLocalScopeVariables(VariablesArguments args) throws Exception {
-        StackFrameProxyImpl stackFrame = suspendedContext.getFrame();
+        StackFrameProxyImpl stackFrame = Objects.requireNonNull(suspendedContext).getFrame();
         List<CompletableFuture<Variable>> scheduledVariables = new ArrayList<>();
         List<CompletableFuture<Variable[]>> scheduledLambdaMapVariables = new ArrayList<>();
         List<LocalVariableProxyImpl> localVariableProxies = stackFrame.visibleVariables();
@@ -1069,19 +1077,23 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
      * @param value         runtime value of the variable
      * @param stackFrameRef reference ID of the parent stack frame
      */
+    @Nullable
     private CompletableFuture<Variable> computeVariableAsync(String name, Value value, Integer stackFrameRef) {
         return CompletableFuture.supplyAsync(() -> {
             BVariable variable = VariableFactory.getVariable(suspendedContext, name, value);
-            if (variable == null) {
-                return null;
-            }
-            if (variable instanceof BSimpleVariable) {
-                variable.getDapVariable().setVariablesReference(0);
-            } else if (variable instanceof BCompoundVariable) {
-                int variableReference = nextVarReference.getAndIncrement();
-                variable.getDapVariable().setVariablesReference(variableReference);
-                loadedCompoundVariables.put(variableReference, (BCompoundVariable) variable);
-                updateVariableToStackFrameMap(stackFrameRef, variableReference);
+            switch (variable) {
+                case null -> {
+                    return null;
+                }
+                case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+                case BCompoundVariable bCompoundVariable -> {
+                    int variableReference = nextVarReference.getAndIncrement();
+                    variable.getDapVariable().setVariablesReference(variableReference);
+                    loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                    updateVariableToStackFrameMap(stackFrameRef, variableReference);
+                }
+                default -> {
+                }
             }
             return variable.getDapVariable();
         }, variableExecutor);
@@ -1127,15 +1139,19 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
             String name = entry.getKey();
             Value value = entry.getValue();
             BVariable variable = VariableFactory.getVariable(suspendedContext, name, value);
-            if (variable == null) {
-                return null;
-            } else if (variable instanceof BSimpleVariable) {
-                variable.getDapVariable().setVariablesReference(0);
-            } else if (variable instanceof BCompoundVariable) {
-                int variableReference = nextVarReference.getAndIncrement();
-                variable.getDapVariable().setVariablesReference(variableReference);
-                loadedCompoundVariables.put(variableReference, (BCompoundVariable) variable);
-                updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+            switch (variable) {
+                case null -> {
+                    return null;
+                }
+                case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+                case BCompoundVariable bCompoundVariable -> {
+                    int variableReference = nextVarReference.getAndIncrement();
+                    variable.getDapVariable().setVariablesReference(variableReference);
+                    loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                    updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+                }
+                default -> {
+                }
             }
             return variable.getDapVariable();
         }).filter(Objects::nonNull).toArray(Variable[]::new);
@@ -1148,15 +1164,19 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
         return varMap.stream().map(value -> {
             String name = String.format("[%d]", index.getAndIncrement());
             BVariable variable = VariableFactory.getVariable(suspendedContext, name, value);
-            if (variable == null) {
-                return null;
-            } else if (variable instanceof BSimpleVariable) {
-                variable.getDapVariable().setVariablesReference(0);
-            } else if (variable instanceof BCompoundVariable) {
-                int variableReference = nextVarReference.getAndIncrement();
-                variable.getDapVariable().setVariablesReference(variableReference);
-                loadedCompoundVariables.put(variableReference, (BCompoundVariable) variable);
-                updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+            switch (variable) {
+                case null -> {
+                    return null;
+                }
+                case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+                case BCompoundVariable bCompoundVariable -> {
+                    int variableReference = nextVarReference.getAndIncrement();
+                    variable.getDapVariable().setVariablesReference(variableReference);
+                    loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                    updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+                }
+                default -> {
+                }
             }
             return variable.getDapVariable();
         }).filter(Objects::nonNull).toArray(Variable[]::new);
@@ -1170,15 +1190,19 @@ public class JBallerinaDebugServer implements BallerinaExtendedDebugServer {
      */
     private EvaluateResponse constructEvaluateResponse(EvaluateArguments args, BVariable evaluationResult) {
         EvaluateResponse response = new EvaluateResponse();
-        if (evaluationResult == null) {
-            return response;
-        } else if (evaluationResult instanceof BSimpleVariable) {
-            evaluationResult.getDapVariable().setVariablesReference(0);
-        } else if (evaluationResult instanceof BCompoundVariable) {
-            int variableReference = nextVarReference.getAndIncrement();
-            evaluationResult.getDapVariable().setVariablesReference(variableReference);
-            loadedCompoundVariables.put(variableReference, (BCompoundVariable) evaluationResult);
-            updateVariableToStackFrameMap(args.getFrameId(), variableReference);
+        switch (evaluationResult) {
+            case null -> {
+                return response;
+            }
+            case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+            case BCompoundVariable bCompoundVariable -> {
+                int variableReference = nextVarReference.getAndIncrement();
+                evaluationResult.getDapVariable().setVariablesReference(variableReference);
+                loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                updateVariableToStackFrameMap(args.getFrameId(), variableReference);
+            }
+            default -> {
+            }
         }
 
         Variable dapVariable = evaluationResult.getDapVariable();
